End of Week One

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
         <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
-        Your HTML goes here
+        <h3>Are you bored with your friends?</h3>
+        <img src="assets/bored.png">
+        <h3>What do you want to do?</h3>
+
+        <div id="bored-container">
+        </div>
+        <div id="bored-answer-container">
+            <h3 id="bored-answer-1"></h3>
+            <span id="bored-answer-2"></span>
+            <span id="boredTimerDisplay"></span>
+        </div>
     </body>
 </html>
